--- a/index.html
+++ b/index.html
@@ -32,19 +32,91 @@
                     <img src="./Imgs/logo_main.avif" id="main-logo">
                 </h1>
             </div>
-            <p>Los planes empiezan desde <span id="price-bold">$6.490/mes</span></p>
+            <p id="price-info">Los planes empiezan desde <span id="price-bold">$6.490/mes</span></p>
             <button id="button-primary-main" class="header-text button-primary">SUSCRÍBETE AHORA</a>
         </div>
     </section>
-    <!-- <section>
-        <div>
+    <section>
+        <div id="plan-switcher-container">
             <div id="h2-container">
                 <h2>ELIGE EL MEJOR PLAN PARA TI</h2>
             </div>
-            <div id="plan-switcher-container">
-
+            <label>AHORRA HASTA UN 30%</label>
+            <div >
+                <div id="plan-switcher">
+                    <button id="plan-switcher-month" class="plan-switcher-button">MENSUAL</button>
+                    <button id="plan-switcher-year" class="plan-switcher-button">ANUAL</button>
+                </div>
+            </div>
+            <div id="plans">   
+                <div id="plan-basic" class="plan">
+                    <div class="plan-padding">
+                        <div id="plan-basic-description" class="plan-description">
+                            <h3>Básico con Anuncios</h3>
+                            <h5></h5>
+                            <ul>
+                                <li><span class="Checkmark"><strong>2 dispositivos</strong> a la vez</span></li>
+                                <li><span class="TV-Icon">Resolución <strong>Full HD</strong></span></li>
+                            </ul>
+                        </div>
+                        <div id="plan-basic-price" class="plan-price-container">
+                            <div class="plan-price">
+                                <h4>$6.490<em>/mes</em></h4>
+                                <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
+                            </div>
+                            <h5></h5>
+                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra <strong>$21.290</strong>></a>
+                        </div>
+                    </div>
+                </div>
+                <div id="plan-standard" class="plan">
+                    <div class="plan-padding">
+                        <div id="plan-standard-description" class="plan-description">
+                            <h3>Estándar</h3>
+                            <h5></h5>
+                            <ul>
+                                <li><span class="Checkmark"><strong>2 dispositivos</strong> a la vez</span></li>
+                                <li><span class="TV-Icon">Resolución <strong>Full HD</strong></span></li>
+                                <li><span class="Download-Icon"><strong>30 descargas</strong> para disfrutar offline</span></li>
+                            </ul>
+                        </div>
+                        <div id="plan-standard-price" class="plan-price-container">
+                            <div class="plan-price">
+                                <h4>$8  .390<em>/mes</em></h4>
+                                <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
+                            </div>
+                            <h5></h5>
+                            <a class="plan-saves">o paga <strong>$70.590</strong>/año y ahorra <strong>$30.090</strong>></a>
+                        </div>
+                    </div>
+                </div>
+                <div id="plan-platinum" class="plan">
+                    <div class="plan-padding">
+                        <div id="plan-platinum-description" class="plan-description">
+                            <h3>Platino</h3>
+                            <h5></h5>
+                            <ul>
+                                <li><span class="Checkmark"><strong>4 dispositivos</strong> a la vez</span></li>
+                                <li><span class="TV-Icon">Resolución <strong>4K Ultra HD*</strong></span></li>
+                                <li><span class="Headphones-Icon">Audio <strong>Dolby Atmos*</strong></span></li>
+                                <li><span class="Download-Icon"><strong>100 descargas</strong> para disfrutar offline</span></li>
+                            </ul>
+                        </div>
+                        <div id="plan-platinum-price" class="plan-price-container">
+                            <div class="plan-price">
+                                <h4>$10.090<em>/mes</em></h4>
+                                <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
+                            </div>
+                            <h5></h5>
+                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra <strong>$21.290</strong>></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="small-text-container">
+                <p><small>*Full HD, 4K Ultra HD y Dolby Atmos no están disponibles en todo el contenido de cada plan. El contenido en vivo en los planes Estándar y Platino puede contener publicidad. Las descargas pueden estar limitadas de acuerdo con el tipo de contenido. Para más información, <a id="help-info">help.hbomax.com/plans.</a> Ahorro basado en un plan anual vs. su versión mensual si es pagado por 12 meses. Requiere pago anticipado.</small></p>
             </div>
         </div>
-    </section> -->
+    </section>
 </body>
 </html>
