--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button id="button-primary-main" class="header-text button-primary">SUSCRÍBETE AHORA</a>
         </div>
     </section>
-    <section>
+    <section >
         <div id="plan-switcher-container">
             <div id="h2-container">
                 <h2>ELIGE EL MEJOR PLAN PARA TI</h2>
@@ -118,5 +118,47 @@
             </div>
         </div>
     </section>
+    <section>
+        <div id="categories-header-container">
+            <h3 id="categories-header">En HBO Max tienes mucho más que ver. Si te gusta el drama, la comedia, los realities y un poco de todo, este es tu lugar.</h3>
+        </div>
+        <div id="categories-container">
+            <div id="family-image" class="category-container">
+                <h4 class="category-name">NIÑOS Y FAMILIA</h4>
+                <p class="show-name">PEPPA PIG</p>
+            </div>
+            <div id="reality-image" class="category-container">
+                <h4 class="category-name">REALITY</h4>
+                <p class="show-name">TODO EN 90 DÍAS</p>
+            </div>
+            <div id="novelas-image" class="category-container">
+                <h4 class="category-name">NOVELAS</h4>
+                <p class="original">MAX ORIGINAL</p>
+                <p class="show-name">¿SERÁ QUE ES AMOR?</p>
+            </div>
+            <div id="movies-image" class="category-container">
+                <h4 class="category-name">CINE</h4>
+                <p class="show-name">GODZILLA VS KONG</p>
+            </div>
+            <div id="drama-image" class="category-container">
+                <h4 class="category-name">DRAMA</h4>
+                <p class="original">HBO ORIGINAL</p>
+                <p class="show-name">JUEGO DE TRONOS</p>
+            </div>
+            <div id="action-image" class="category-container">
+                <h4 class="category-name">ACCIÓN</h4>
+                <p class="original">HBO ORIGINAL</p>
+                <p class="show-name">THE LAST OF US</p>
+            </div>
+            <div id="comedy-image" class="category-container">
+                <h4 class="category-name">COMEDIA</h4>
+                <p class="show-name">THE BIG BANG THEORY</p>
+            </div>
+            <div id="documentaries-image" class="category-container">
+                <h4 class="category-name">DOCUMENTALES</h4>
+                <p class="show-name">FAMA INFANTIL</p>
+            </div>
+        </div>
+    </section> 
 </body>
 </html>
