--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button id="button-primary-main" class="header-text button-primary">SUSCRÍBETE AHORA</a>
         </div>
     </section>
-    <section >
+    <section id="plans-section">
         <div id="plan-switcher-container">
             <div id="h2-container">
                 <h2>ELIGE EL MEJOR PLAN PARA TI</h2>
@@ -118,7 +118,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="categories-section">
         <div id="categories-header-container">
             <h3 id="categories-header">En HBO Max tienes mucho más que ver. Si te gusta el drama, la comedia, los realities y un poco de todo, este es tu lugar.</h3>
         </div>
@@ -159,6 +159,35 @@
                 <p class="show-name">FAMA INFANTIL</p>
             </div>
         </div>
-    </section> 
+    </section>
+    <section id="trailers-section">
+        <div>
+            <h2 id="trailers-main-text">Estrenos de los que no pararás de hablar</h2>
+        </div>
+        <div id="trailers-container">
+            <div class="trailers-sub-container">
+                <div>
+                    <img src="./Imgs/a_carpenter_christmas_romance_spa.avif" class="trailer-image">
+                </div>
+                <div>
+                    <img src="./Imgs/hbo-max-new-release-2025-it-welcome-to-derry-latam.avif" class="trailer-image">
+                </div>
+                <div>
+                    <img src="./Imgs/hbo-max-new-release-2025-dogman-latam.avif" class="trailer-image">
+                </div>
+            </div>
+            <div class="trailers-sub-container">
+                <div>
+                    <img src="./Imgs/hbo-max-new-release-2025-love-hurts-latam.avif" class="trailer-image">
+                </div>
+                <div>
+                    <img src="./Imgs/hbo-max-new-release-2025-weapons-latam.avif" class="trailer-image">
+                </div>
+                <div>
+                    <img src="./Imgs/hbo-max-new-release-the-conjuring-2025-mx.avif" class="trailer-image">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
