--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <nav id="header">
         <div id="header-secondary">
@@ -21,8 +23,8 @@
             </div>
         </div>
         <div id="header-primary">
-            <button class="header-text">INGRESA</a>
-            <button class="header-text button-primary">SUSCRÍBETE AHORA</a>
+            <button class="header-text">INGRESA</button>
+            <button class="header-text button-primary">SUSCRÍBETE AHORA</button>
         </div>
     </nav>
     <section id="main-section">
@@ -42,13 +44,13 @@
                 <h2>ELIGE EL MEJOR PLAN PARA TI</h2>
             </div>
             <label>AHORRA HASTA UN 30%</label>
-            <div >
+            <div>
                 <div id="plan-switcher">
                     <button id="plan-switcher-month" class="plan-switcher-button">MENSUAL</button>
                     <button id="plan-switcher-year" class="plan-switcher-button">ANUAL</button>
                 </div>
             </div>
-            <div id="plans">   
+            <div id="plans">
                 <div id="plan-basic" class="plan">
                     <div class="plan-padding">
                         <div id="plan-basic-description" class="plan-description">
@@ -65,7 +67,8 @@
                                 <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
                             </div>
                             <h5></h5>
-                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra <strong>$21.290</strong>></a>
+                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra
+                                <strong>$21.290</strong>></a>
                         </div>
                     </div>
                 </div>
@@ -77,16 +80,18 @@
                             <ul>
                                 <li><span class="Checkmark"><strong>2 dispositivos</strong> a la vez</span></li>
                                 <li><span class="TV-Icon">Resolución <strong>Full HD</strong></span></li>
-                                <li><span class="Download-Icon"><strong>30 descargas</strong> para disfrutar offline</span></li>
+                                <li><span class="Download-Icon"><strong>30 descargas</strong> para disfrutar
+                                        offline</span></li>
                             </ul>
                         </div>
                         <div id="plan-standard-price" class="plan-price-container">
                             <div class="plan-price">
-                                <h4>$8  .390<em>/mes</em></h4>
+                                <h4>$8 .390<em>/mes</em></h4>
                                 <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
                             </div>
                             <h5></h5>
-                            <a class="plan-saves">o paga <strong>$70.590</strong>/año y ahorra <strong>$30.090</strong>></a>
+                            <a class="plan-saves">o paga <strong>$70.590</strong>/año y ahorra
+                                <strong>$30.090</strong>></a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +104,8 @@
                                 <li><span class="Checkmark"><strong>4 dispositivos</strong> a la vez</span></li>
                                 <li><span class="TV-Icon">Resolución <strong>4K Ultra HD*</strong></span></li>
                                 <li><span class="Headphones-Icon">Audio <strong>Dolby Atmos*</strong></span></li>
-                                <li><span class="Download-Icon"><strong>100 descargas</strong> para disfrutar offline</span></li>
+                                <li><span class="Download-Icon"><strong>100 descargas</strong> para disfrutar
+                                        offline</span></li>
                             </ul>
                         </div>
                         <div id="plan-platinum-price" class="plan-price-container">
@@ -108,19 +114,25 @@
                                 <a href="index.html" class="plan-select">ELIGE ESTE PLAN</a>
                             </div>
                             <h5></h5>
-                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra <strong>$21.290</strong>></a>
+                            <a class="plan-saves">o paga <strong>$56.590</strong>/año y ahorra
+                                <strong>$21.290</strong>></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div id="small-text-container">
-                <p><small>*Full HD, 4K Ultra HD y Dolby Atmos no están disponibles en todo el contenido de cada plan. El contenido en vivo en los planes Estándar y Platino puede contener publicidad. Las descargas pueden estar limitadas de acuerdo con el tipo de contenido. Para más información, <a id="help-info">help.hbomax.com/plans.</a> Ahorro basado en un plan anual vs. su versión mensual si es pagado por 12 meses. Requiere pago anticipado.</small></p>
+                <p><small>*Full HD, 4K Ultra HD y Dolby Atmos no están disponibles en todo el contenido de cada plan. El
+                        contenido en vivo en los planes Estándar y Platino puede contener publicidad. Las descargas
+                        pueden estar limitadas de acuerdo con el tipo de contenido. Para más información, <a
+                            id="help-info">help.hbomax.com/plans.</a> Ahorro basado en un plan anual vs. su versión
+                        mensual si es pagado por 12 meses. Requiere pago anticipado.</small></p>
             </div>
         </div>
     </section>
     <section id="categories-section">
         <div id="categories-header-container">
-            <h3 id="categories-header">En HBO Max tienes mucho más que ver. Si te gusta el drama, la comedia, los realities y un poco de todo, este es tu lugar.</h3>
+            <h3 id="categories-header">En HBO Max tienes mucho más que ver. Si te gusta el drama, la comedia, los
+                realities y un poco de todo, este es tu lugar.</h3>
         </div>
         <div id="categories-container">
             <div id="family-image" class="category-container">
@@ -188,6 +200,56 @@
                 </div>
             </div>
         </div>
+        <div id="trailers-suscribe-btn-container">
+            <button id="trailers-suscribe-btn" class="header-text button-primary">SUSCRÍBETE AHORA</button>
+        </div>
+    </section>
+    <section id="featured-series-section">
+        <div id="featured-series-container">
+            <div id="carrousel-header-container">
+                <div id="carrousel-header">
+                    <h2>DESCUBRE LO MEJOR EN</h2>
+                </div>
+                <div id="carrousel-indicators">
+                    <a></a>
+                    <ol id="carrousel-indicator-list">
+                        <li class>Drama</li>
+                        <li class>Realities</li>
+                        <li class>Acción</li>
+                        <li class>Comedia</li>
+                        <li class>Crimen</li>
+                        <li class>Novelas</li>
+                        <li class>Suspenso</li>
+                        <li class>Sci-Fi</li>
+                    </ol>
+                </div>
+            </div>
+            <div id="carrousel-images-container">
+                <div class="carrousel-images-sub-container">
+                    <div>
+                        <img src="./Imgs/tbbt.avif" class="carrousel-image">
+                    </div>
+                    <div>
+                        <img src="./Imgs/hbo-max-best-in-rick-and-morty_1.avif" class="carrousel-image">
+                    </div>
+                    <div>
+                        <img src="./Imgs/friends.avif" class="carrousel-image">
+                    </div>
+                </div>
+                <div class="carrousel-images-sub-container">
+                    <div>
+                        <img src="./Imgs/hacks_s3.avif" class="carrousel-image">
+                    </div>
+                    <div>
+                        <img src="./Imgs/hbo-max-best-in-gumball-latam_2.avif" class="carrousel-image">
+                    </div>
+                    <div>
+                        <img src="./Imgs/hbo-max-best-in-viudas-negras-latam_1.avif" class="carrousel-image">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+
 </html>
