--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </nav>
     <section id="main-section">
         <div id="main-container">
-            <div id="main-logo-container">
+            <div class="main-logo-container">
                 <h1>
-                    <img src="./Imgs/logo_main.avif" id="main-logo">
+                    <img src="./Imgs/logo_main.avif" class="main-logo">
                 </h1>
             </div>
             <p id="price-info">Los planes empiezan desde <span id="price-bold">$6.490/mes</span></p>
@@ -250,6 +250,99 @@
             </div>
         </div>
     </section>
+    <section id="questions-section">
+        <div class="main-logo-container">
+            <h1>
+                <img src="./Imgs/logo_main.avif" class="main-logo">
+            </h1>
+        </div>
+        <div id="questions-container">
+            <ul id="questions-list">
+                <li class="question-item"><details class="question accordion">
+                    <summary class="question-title"><h3>¿Cómo me registro?</h3><svg xmlns="http://www.w3.org/2000/svg"><path d="M1.5 24.5L12.5 13L1.5 1.5"></path></svg></summary>
+                    <div><p class="question-answer">
+                        HBO Max está disponible en HBOMax.com y a través de los proveedores de HBO Max en la región.
+                    </p></div>
+                    <div><p class="question-answer">
+                        Si obtienes HBO con tu paquete de TV, servicio de Internet o telefonía móvil, podrás tener acceso a HBO Max sin costo adicional. Puedes contactar a tu operador local para obtener más detalles. Para más información, visita help.max.com/plans
+                    </p></div>
+                </details></li>
+                <li class="question-item"><details class="question accordion">
+                    <summary class="question-title"><h3>¿Dónde está disponible HBO Max?</h3><svg xmlns="http://www.w3.org/2000/svg"><path d="M1.5 24.5L12.5 13L1.5 1.5"></path></svg></summary>
+                    <div><p class="question-answer">
+                        La nueva plataforma está disponible en Anguila, Antigua y Barbuda, Argentina, Aruba, Bahamas, Barbados, Belice, Bolivia, Brasil, Chile, Colombia, Costa Rica, Curazao, Dominica, Ecuador, El Salvador, Granada, Guatemala, Guyana, Haití, Honduras, Islas Caimán, Islas Vírgenes Británicas, Islas Turcas y Caicos, Jamaica, México, Montserrat, Nicaragua, Panamá, Paraguay, Perú, República Dominicana, San Cristóbal y Nieves, Santa Lucía, San Vicente y las Granadinas, Surinam, Trinidad y Tobago, Uruguay, Venezuela y Estados Unidos.
+                    </p></div>
+                </details></li>
+                <li class="question-item"><details class="question accordion">
+                    <summary class="question-title"><h3>¿Cuánto cuesta HBO Max?</h3><svg xmlns="http://www.w3.org/2000/svg"><path d="M1.5 24.5L12.5 13L1.5 1.5"></path></svg></summary>
+                    <div><p class="question-answer">
+                        Los nuevos usuarios tendrán 3 planes para elegir según sus preferencias:
+                    </p></div>
+                    <div>
+                        <ul class="question-answer">
+                            <li><strong>Plan Básico con Anuncios:</strong> $6.490 mensual / $56.590 anual</li>
+                            <li><strong>Plan Estándar:</strong> $8.390 mensual / $70.590 anual</li>
+                            <li><strong>Plan Platino:</strong> $10.090 mensual / $84.090 anual</li>
+                        </ul>
+                    </div>
+                    <div><p class="question-answer"><em><small>
+                        *Full HD, 4K Ultra HD y Dolby Atmos no están disponibles en todo el contenido de cada plan. El contenido en vivo en los planes Estándar y Platino puede contener publicidad. Las descargas pueden estar limitadas de acuerdo con el tipo de contenido. 
+                    </small></em></p></div>
+                </details></li>
+                <li class="question-item"><details class="question accordion">
+                    <summary class="question-title"><h3>¿En qué dispositivos funciona HBO Max?</h3><svg xmlns="http://www.w3.org/2000/svg"><path d="M1.5 24.5L12.5 13L1.5 1.5"></path></svg></summary>
+                    <div><p class="question-answer">
+                        HBO Max está disponible en los siguientes dispositivos:
+                    </p></div>  
+                    <div class="question-answer">
+                        <p><strong>TV</strong></p>
+                        <ul>
+                            <li>Amazon fire</li>
+                            <li>Android TV</li>
+                            <li>Apple TV</li>
+                            <li>Chromecast</li>
+                            <li>LG</li>
+                            <li>Roku</li>
+                            <li>Samsung</li>
+                        </ul>
+                    </div>
+                    <div class="question-answer">
+                        <p><strong>Computadora</strong></p>
+                        <ul>
+                            <li>Chrome OS</li>
+                            <li>MacOS</li>
+                            <li>Windows PC</li>
+                        </ul>
+                    </div>
+                    <div class="question-answer">
+                        <p><strong>Consola de Videojuegos</strong></p>
+                        <ul>
+                            <li>PS4</li>
+                            <li>PS5</li>
+                            <li>Xbox One</li>
+                            <li>Xbox Series X|S</li>
+                        </ul>
+                    </div>
+                    <div class="question-answer">
+                        <p><strong>Mobile & Tablet</strong></p>
+                        <ul>
+                            <li>Amazon Fire Tablet</li>
+                            <li>Android Phone & Tablet</li>
+                            <li>iPhone & iPad</li>
+                        </ul>
+                    </div>
+                    <div><p class="question-answer">
+                        Si el dispositivo es compatible, encontrarás Max en la tienda de aplicaciones.
+                    </p></div>
+                </details></li>
+                <li class="question-item"><details class="question accordion">
+                    <summary class="question-title"><h3>Tengo HBO ¿Tengo acceso a HBO Max? </h3><svg xmlns="http://www.w3.org/2000/svg"><path d="M1.5 24.5L12.5 13L1.5 1.5"></path></svg></summary>
+                    <div><p class="question-answer">
+                        HBO Max está incluido sin costo adicional con la suscripción a los canales de HBO a través de algunos operadores de TV Paga participantes en toda la región. Puedes contactar a tu operador local para obtener más detalles.
+                    </p></div>
+                </details></li>
+            </ul>
+        </div>
+    </section>
 </body>
-
 </html>
