--- a/index.html
+++ b/index.html
@@ -344,5 +344,48 @@
             </ul>
         </div>
     </section>
+    <footer>
+        <div id="footer-container">
+            <div id="footer-btns">
+                <div class="footer-btns-row">
+                    <a class="footer-btn bold">AHORA EN HBO MAX</a>
+                    <a class="footer-btn bold">PELÍCULAS</a>
+                    <a class="footer-btn bold">SERIES DE TV</a>
+                    <a class="footer-btn bold">EPISODIOS GRATIS</a>
+                    <a class="footer-btn bold">NIÑOS Y FAMILIA</a>
+                    <a class="footer-btn bold">AYUDA</a>
+                </div class="footer-btns-row">
+                <div class="footer-btns-row">
+                    <a class="footer-btn">Accesibilidad</a>
+                    <a class="footer-btn">Política De Privacidad</a>
+                    <a class="footer-btn">Modo Infantil</a>
+                    <a class="footer-btn">Términos De Uso</a>
+                    <a class="footer-btn">Administrar Las Preferencias De Cookies</a>
+                </div>
+                <div class="footer-btns-row">
+                    <a class="footer-btn">Comunicados De Prensa</a>
+                </div>
+            </div>
+            <div class="legal-info">
+                <p><small>
+                    ©2025 WarnerMedia Direct Latin America, LLC. Todos los derechos reservados. HBO Max se usa bajo licencia.
+                </small></p>
+            </div>
+            <div id="social-media">
+                <div class="social-icon-container">
+                    <img id="facebook" class="social-icon" src="./Imgs/social_iconfacebook.png">
+                </div>
+                <div class="social-icon-container">
+                    <img id="youtube" class="social-icon" src="./Imgs/social_iconyoutube.png">
+                </div>
+                <div class="social-icon-container">
+                    <img id="twitter" class="social-icon" src="./Imgs/x.png">
+                </div>
+                <div class="social-icon-container">
+                    <img id="tiktok" class="social-icon" src="./Imgs/tik_tok.png">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
